@@ -66,7 +66,7 @@ $_profil = $plxAdmin->aUsers[$_SESSION['user']];
 		<div class="grid">
 			<div class="col sml-12">
 				<label for="id_content"><?php echo L_PROFIL_INFOS ?>&nbsp;:</label>
-				<?php plxUtils::printArea('content',plxUtils::strCheck($_profil['infos']),140,5,false,'full-width'); ?>
+				<?php plxUtils::printArea('content',plxUtils::strCheck($_profil['infos']), 0, 5); ?>
 			</div>
 		</div>
 	</fieldset>
