@@ -14,7 +14,7 @@ class plxUtils {
 	 *
 	 * @param	var			string	variable à tester
 	 * @param	default		string	valeur par défaut
-	 * @return	valeur de la variable ou valeur par défaut passée en paramètre
+	 * @return	string      valeur de la variable ou valeur par défaut passée en paramètre
 	*/
 	public static function getValue(&$var, $default='') {
 		return (isset($var) ? (!empty($var) ? $var : $default) : $default) ;
@@ -40,6 +40,8 @@ class plxUtils {
 	 * @return	array ou string		tableau ou variable avec les antislashs supprimés
 	 **/
 	public static function unSlash($content) {
+
+	    $new_content = '';
 
 		if(get_magic_quotes_gpc() == 1) {
 			if(is_array($content)) { # On traite un tableau
@@ -142,7 +144,6 @@ class plxUtils {
 	 * @param	readonly	vrai si la liste est en lecture seule (par défaut à faux)
 	 * @param	class		class css à utiliser pour formater l'affichage
 	 * @param	id			si vrai génère un id à partir du nom du champ, sinon génère l'id à partir du paramètre
-	 * @return	stdout
 	 **/
 	public static function printSelect($name, $array, $selected='', $readonly=false, $class='', $id=true) {
 
@@ -188,7 +189,6 @@ class plxUtils {
 	 * @param	class		class css à utiliser pour formater l'affichage
 	 * @param	placeholder valeur du placeholder du champ (html5)
 	 * @param   extra		extra paramètre pour du javascript par exemple (onclick)
-	 * @return	stdout
 	 **/
 	public static function printInput($name, $value='', $type='text', $sizes='50-255', $readonly=false, $className='', $placeholder='', $extra='') {
 
@@ -228,14 +228,29 @@ class plxUtils {
 	 * @params	rows		nombre de caractères affichés par ligne
 	 * @param	readonly	vrai si le champ est en lecture seule (par défaut à faux)
 	 * @param	class		class css à utiliser pour formater l'affichage
-	 * @return	stdout
 	 **/
-	public static function printArea($name, $value='', $cols='', $rows='', $readonly=false, $class='') {
+	public static function printArea($name, $value='', $cols='', $rows='', $readonly=false, $className='full-width') {
 
-		if($readonly)
-			echo '<textarea id="id_'.$name.'" name="'.$name.'" class="readonly" cols="'.$cols.'" rows="'.$rows.'" readonly="readonly">'.$value.'</textarea>'."\n";
-		else
-			echo '<textarea id="id_'.$name.'" name="'.$name.'"'.($class!=''?' class="'.$class.'"':'').' cols="'.$cols.'" rows="'.$rows.'">'.$value.'</textarea>'."\n";
+	    $params = array(
+	        'id="id_'.$name.'"',
+	        'name="'.$name.'"'
+        );
+	    
+	    if(! empty($cols)) {
+	        $params[] = 'cols="'.$cols.'"';
+	    }
+	    if(! empty($rows)) {
+	        $params[] = 'rows="'.$rows.'"';
+	    }
+	    if($readonly === true) {
+	        $params = 'class="readonly"';
+	        $params = 'readonly="readonly"';
+	    } else {
+	        if(! empty($className)) {
+	            $params[] = 'class="'.$className.'"';
+	        }
+	    }
+	    echo '<textarea '.implode(' ', $params).'>'.$value.'</textarea>';
 	}
 
 	/**
@@ -598,9 +613,8 @@ class plxUtils {
 	 *
 	 * @param	string message à afficher
 	 * @param	string classe css à utiliser pour formater l'affichage du message
-	 * @param       string format des balises avant le message
+	 * @param   string format des balises avant le message
 	 * @param	string format des balises après le message
-	 * @return      stdout
 	 **/
 	public static function showMsg($msg, $class='',$format_start='<p class="#CLASS">',$format_end='</p>') {
 		$format_start = str_replace('#CLASS',($class != '' ? $class : 'msg'),$format_start);
@@ -696,7 +710,7 @@ class plxUtils {
 	/**
 	 * Méthode qui retourne le type de compression disponible
 	 *
-	 * @return	stout
+	 * @return	string or boolean
 	 * @author	Stephane F., Amaury Graillat
 	 **/
 	public static function httpEncoding() {
@@ -763,7 +777,6 @@ class plxUtils {
 	/**
 	 * Méthode qui empeche de mettre en cache une page
 	 *
-	 * @return	stdio
 	 * @author	Stephane F.
 	 **/
 	public static function cleanHeaders() {
@@ -854,6 +867,14 @@ class plxUtils {
 	*/
 	public static function truncate($text, $length = 100, $ending = '...', $exact = true, $considerHtml = false) {
 		if ($considerHtml) {
+		    
+		    $lines = '';
+		    $tag_matchings = '';
+		    $total_length = strlen($ending);
+		    $open_tags = array();
+		    $truncate = '';
+		    $entities = '';
+		    
 			// if the plain text is shorter than the maximum length, return the whole text
 			if (strlen(preg_replace('/<.*?>/', '', $text)) <= $length) {
 				return $text;
@@ -861,10 +882,6 @@ class plxUtils {
 
 			// splits all html-tags to scanable lines
 			preg_match_all('/(<.+?>)?([^<>]*)/s', $text, $lines, PREG_SET_ORDER);
-
-			$total_length = strlen($ending);
-			$open_tags = array();
-			$truncate = '';
 
 			foreach ($lines as $line_matchings) {
 				// if there is any html-tag in this line, handle it and add it (uncounted) to the output
@@ -992,6 +1009,9 @@ class plxUtils {
 	 * @return	string	nom de la miniature au format fichier.tb.ext
 	*/
 	public static function thumbName($filename) {
+	    
+	    $matches = '';
+	    
 		if(preg_match('/^(.*\.)(jpe?g|png|gif)$/iD', $filename, $matches)) {
 			return $matches[1].'tb.'.$matches[2];
 		} else {
